fixed z-index

--- a/gisapp/static/gisapp/css/custom.css
+++ b/gisapp/static/gisapp/css/custom.css
@@ -21,6 +21,11 @@ body, html,
 	text-indent:15px;
 }
 
+.ui-dialog {
+    z-index: 2;
+}
+
+
 @media(min-width:768px) {
 	#menu {
 	    overflow-y: auto;
